--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="page">
     <!-- ***** header start ***** -->
-    <header class="header">
+    <!-- <header class="header">
       <img src="/images/__logo.svg" alt="Логотип Россия" class="header__logo">
       <ul class="header__links">
         <li>
@@ -22,21 +22,39 @@
       </ul>
       
       
-    </header>
+    </header> -->
     <!-- ***** header end ***** -->
 
     <!-- ***** lead start ***** -->
-    <section class="lead">
+    <!-- <section class="lead">
       <h1 class="lead__title">Путешествия по России</h1>
       <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
       <div class="lead__image"></div>
       <p class="lead__caption">ваша полка — верхняя</p>
-    </section>
+    </section> -->
     <!-- ***** lead end ***** -->
 
     <!-- ***** intro start ***** -->
     <section class="intro">
-
+      <h2 class="intro__title">Чего мы там не видели?</h2>
+      <p class="intro__text">
+        По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.
+      </p>
+      <ul class="intro__list">
+        <li class="intro__list-item intro__list-item_bold">Часовых поясов
+          <span class="intro__list-item">11</span>
+        </li>
+        <li class="intro__list-item intro__list-item_bold">Объектов природного наследия ЮНЕСКО  
+          <span class="intro__list-item">12</span>
+        </li>
+        <li class="intro__list-item intro__list-item_bold">Объектов культурного наследия ЮНЕСКО <span class="intro__list-item">16</span></li>
+        <li class="intro__list-item intro__list-item_bold">Природных заповедников 
+          <span class="intro__list-item">105</span>
+        </li>
+        <li class="intro__list-item intro__list-item_bold">Аэропортов 
+          <span class="intro__list-item">241</span>
+        </li>
+      </ul>
     </section>
     <!-- ***** intro end ***** -->
 
