--- a/index.html
+++ b/index.html
@@ -60,7 +60,44 @@
 
     <!-- ***** photo-grid start ***** -->
     <section class="photo-grid">
-
+      <ul class="photo-grid__items">
+        <li>
+          <img src="/images/photo-grid__item-1.jpg" alt="Вид из окна поезда" class="photo-grid__item">
+        </li>
+        <li>
+          <img src="/images/photo-grid__item-2.jpg" alt="Белые облака, снежный горный хребет" class="photo-grid__item">
+        </li>
+        <li>
+          <img src="/images/photo-grid__item-3.jpg" alt="Стога сена в поле" class="photo-grid__item">
+        </li>
+        <li>
+          <img src="/images/photo-grid__item-4.jpg" alt="Снежный лес" class="photo-grid__item">
+        </li>
+        <li>
+          <img src="/images/photo-grid__item-5.jpg" alt="Лёд озера Байкал" class="photo-grid__item">
+        </li>
+        <li>
+          <img src="/images/photo-grid__item-6.jpg" alt="Морской пляж" class="photo-grid__item">
+        </li>
+        <li>
+          <img src="/images/photo-grid__item-7.jpg" alt="Горные пики" class="photo-grid__item">
+        </li>
+        <li>
+          <img src="/images/photo-grid__item-8.jpg" alt="Белые береговые волноломы" class="photo-grid__item">
+        </li>
+        <li>
+          <img src="/images/photo-grid__item-9.jpg" alt="Цветные горы" class="photo-grid__item">
+        </li>
+        <li>
+          <img src="/images/photo-grid__item-10.jpg" alt="Подножие горы" class="photo-grid__item">
+        </li>
+        <li>
+          <img src="/images/photo-grid__item-11.jpg" alt="Фьорды" class="photo-grid__item">
+        </li>
+        <li>
+          <img src="/images/photo-grid__item-12.jpg" alt="Горный пик в тумане облаков" class="photo-grid__item">
+        </li>
+      </ul>
     </section>
     <!-- ***** photo-grid end ***** -->
 
