--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- ***** lead end ***** -->
 
     <!-- ***** intro start ***** -->
-    <section class="intro">
+    <!-- <section class="intro">
       <h2 class="intro__title">Чего мы там не видели?</h2>
       <p class="intro__text">
         По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.
@@ -55,7 +55,7 @@
           <span class="intro__list-item">241</span>
         </li>
       </ul>
-    </section>
+    </section> -->
     <!-- ***** intro end ***** -->
 
     <!-- ***** photo-grid start ***** -->
@@ -103,7 +103,90 @@
 
     <!-- ***** places start ***** -->
     <section class="places">
-
+      <article class="place">
+        <h2 class="place__title">Куршская&emsp;коса</h2>
+        <div class="place__website">
+          <p class="place__url-heading">url</p>
+          <a class="place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
+        </div>
+        <img src="/images/park-kosa.jpg" alt="Куршская коса" class="place__image">
+        <div class="place__paragraphs">
+          <p class="place__paragraph">
+            Здесь, посреди лесов и&nbsp;песчаных дюн, вы&nbsp;сможете увидеть два водных горизонта&nbsp;&mdash; спокойного Куршского залива с&nbsp;одной стороны и&nbsp;подёрнутого рябью волн Балтийского моря с&nbsp;другой. Уникальная природная зона на&nbsp;краю российского анклава.
+          </p>
+          <p class="place__paragraph">
+            На&nbsp;этом Калининградская область не&nbsp;заканчивается. Для путешественника и&nbsp;исследователя там&nbsp;же по&nbsp;соседству&nbsp;&mdash; самая западная точка России, Балтийская коса,&nbsp;&mdash; и&nbsp;немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в&nbsp;спокойствие природы и&nbsp;запах стального, прохладного моря.
+          </p>
+        </div>
+      </article>
+      <article class="place">
+        <h2 class="place__title">Кольский</h2>
+        <div class="place__website">
+          <p class="place__url-heading">url</p>
+          <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
+        </div>
+        <img src="/images/kola-peninsula.jpg" alt="Кольский полуостров" class="place__image">
+        <div class="place__paragraphs">
+          <p class="place__paragraph">
+            Почти весь полуостров находится за&nbsp;Полярным кругом. Саамская тундра, от&nbsp;которой на&nbsp;юг&nbsp;&mdash; 
+          тайга, а&nbsp;на&nbsp;север&nbsp;&mdash; Ледовитый океан, прикидывающийся Баренцевым морем.
+          </p>
+          <p class="place__paragraph">
+            Возможно, вы&nbsp;смотрели Звягинцева и&nbsp;даже слышали историю арктического фестиваля в&nbsp;Териберке. Возможно, слово &laquo;Хибины&raquo; не&nbsp;осталось под снегом школьных воспоминаний об&nbsp;уроках географии. Возможно, вы&nbsp;не&nbsp;интересовались пронизывающей земную кору сверхглубокой скважиной, а&nbsp;от&nbsp;апатитов вас давно накрывает апатия. Но&nbsp;ваша мечта увидеть северное сияние начинает сбываться с&nbsp;билетом
+          в&nbsp;Мурманск.
+          </p>
+        </div>
+      </article>
+      <article class="place">
+        <h2 class="place__title">Алтай</h2>
+        <div class="place__website">
+          <p class="place__url-heading">url</p>
+          <a class="place__link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" target="_blank">YouTube</a>
+        </div>
+        <img src="/images/altai.jpg" alt="Алтай" class="place__image">
+        <div class="place__paragraphs">
+          <p class="place__paragraph">
+            Алтай&nbsp;&mdash; одно из&nbsp;красивейших мест в&nbsp;России. 
+          В&nbsp;первую очередь из-за гор: если ехать вдоль хребта, вы&nbsp;увидите склоны, усыпанные соснами, горные реки и&nbsp;озёра. А&nbsp;если вы&nbsp;откроете в&nbsp;автомобиле окна, сможете познакомиться с&nbsp;невидимым чудом здешних мест&nbsp;&mdash; горным воздухом.
+          </p>
+          <p class="place__paragraph">
+            Климат на&nbsp;Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы&nbsp;увидите всё разнообразие местной флоры и&nbsp;фауны. По&nbsp;лесам Алтая бродят лоси, над хребтами летают орлы, а&nbsp;на&nbsp;равнинах пасутся косули. И&nbsp;знаменитые манулы&nbsp;&mdash; тоже обитатели Алтайского края.
+          </p>
+        </div>
+      </article>
+      <article class="place">
+        <h2 class="place__title">Зимний Байкал</h2>
+        <div class="place__website">
+          <p class="place__url-heading">url</p>
+          <a class="place__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
+        </div>
+        <img src="/images/baikal.jpg" alt="Байкал" class="place__image">
+        <div class="place__paragraphs">
+          <p class="place__paragraph">
+            Всем известен Байкал как крупнейшее озеро 
+          в&nbsp;мире. Многие также знают, что это самый большой источник пресной воды и&nbsp;одно из&nbsp;красивейших мест в&nbsp;России.
+          </p>
+          <p class="place__paragraph">
+            Конечно, это всё так. Но&nbsp;Байкал ещё идеальное место для соревнований по&nbsp;скийорингу. Это такой вид спорта, когда лыжник привязывает себя 
+          к&nbsp;мотоциклу, и&nbsp;тандем старается развить как можно б&oacute;льшую скорость на&nbsp;льду. В&nbsp;марте 2019 года на&nbsp;фестивале &laquo;Байкальская миля&raquo; был поставлен мировой рекорд&nbsp;&mdash; 197.011&nbsp;км/ч.
+          </p>
+        </div>
+      </article>
+      <article class="place">
+        <h2 class="place__title">Карелия</h2>
+        <div class="place__website">
+          <p class="place__url-heading">url</p>
+          <a class="place__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
+        </div>
+        <img src="/images/karelia.jpg" alt="Карелия" class="place__image">
+        <div class="place__paragraphs">
+          <p class="place__paragraph">
+            Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
+          В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья 
+          в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.
+          </p>
+        </div>
+      </article>
     </section>
     <!-- ***** places end ***** -->
 
