--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <!-- ***** intro end ***** -->
 
     <!-- ***** photo-grid start ***** -->
-    <section class="photo-grid">
+    <!-- <section class="photo-grid">
       <ul class="photo-grid__items">
         <li>
           <img src="/images/photo-grid__item-1.jpg" alt="Вид из окна поезда" class="photo-grid__item">
@@ -98,12 +98,12 @@
           <img src="/images/photo-grid__item-12.jpg" alt="Горный пик в тумане облаков" class="photo-grid__item">
         </li>
       </ul>
-    </section>
+    </section> -->
     <!-- ***** photo-grid end ***** -->
 
     <!-- ***** places start ***** -->
     <section class="places">
-      <article class="place">
+      <!-- <article class="place">
         <h2 class="place__title">Куршская&emsp;коса</h2>
         <div class="place__website">
           <p class="place__url-heading">url</p>
@@ -171,7 +171,7 @@
           к&nbsp;мотоциклу, и&nbsp;тандем старается развить как можно б&oacute;льшую скорость на&nbsp;льду. В&nbsp;марте 2019 года на&nbsp;фестивале &laquo;Байкальская миля&raquo; был поставлен мировой рекорд&nbsp;&mdash; 197.011&nbsp;км/ч.
           </p>
         </div>
-      </article>
+      </article> -->
       <article class="place">
         <h2 class="place__title">Карелия</h2>
         <div class="place__website">
@@ -181,8 +181,7 @@
         <img src="/images/karelia.jpg" alt="Карелия" class="place__image">
         <div class="place__paragraphs">
           <p class="place__paragraph">
-            Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
-          В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья 
+            Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья 
           в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.
           </p>
         </div>
@@ -192,7 +191,10 @@
 
     <!-- ***** cover start ***** -->
     <section class="cover">
-      
+      <h2 class="cover__title">До Байкала «на собаках»</h2>
+      <p class="cover__subtitle">
+        По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
+      </p>
     </section>
     <!-- ***** cover end ***** -->
 
