--- a/index.html
+++ b/index.html
@@ -181,8 +181,7 @@
         <img src="/images/karelia.jpg" alt="Карелия" class="place__image">
         <div class="place__paragraphs">
           <p class="place__paragraph">
-            Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья 
-          в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.
+            Сибирь заканчивается не&nbsp;на&nbsp;Урале, а&nbsp;в&nbsp;Карелии: образующая тайгу сибирская лиственница не&nbsp;растёт западнее Водлозера. Зато здесь она вымахивает на&nbsp;30&nbsp;метров&nbsp;&mdash; леса карельских национальных парков из-за непроходимых болот никогда не&nbsp;знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к&nbsp;живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В&nbsp;девственном лесу на&nbsp;сотню километров не&nbsp;встретишь тропы. А&nbsp;на&nbsp;редких тропинках деревья в&nbsp;паре метров от&nbsp;земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.
           </p>
         </div>
       </article>
@@ -191,16 +190,35 @@
 
     <!-- ***** cover start ***** -->
     <section class="cover">
-      <h2 class="cover__title">До Байкала «на собаках»</h2>
+      <h2 class="cover__title">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</h2>
       <p class="cover__subtitle">
-        По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
+        По&nbsp;мотивам учебной темы о&nbsp;Транссибе&nbsp;&mdash; путешествие от&nbsp;столицы до&nbsp;Байкала на&nbsp;электричках.
       </p>
     </section>
     <!-- ***** cover end ***** -->
 
     <!-- ***** footer start ***** -->
     <footer class="footer">
-
+      <ul class="footer__links">
+        <li>
+          <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
+        </li>
+        <li>
+          <a href="https://yandex.ru/pogoda" class="footer__link">Погода</a>
+        </li>
+        <li>
+          <a href="https://rasp.yandex.ru" class="footer__link">Расписание</a>
+        </li>
+        <li>
+          <a href="https://calendar.yandex.ru" class="footer__link">Календарь</a>
+        </li>
+        <li>
+          <a href="https://travel.yandex.ru" class="footer__link">Путешествия</a>
+        </li>
+      </ul>
+      <p class="footer__copyright">
+        &copy;2020. Екатерина Балабанидис
+      </p>
     </footer>
     <!-- ***** footer end ***** -->
   </div>
