--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="page">
     <!-- ***** header start ***** -->
-    <!-- <header class="header">
+    <header class="header">
       <img src="/images/__logo.svg" alt="Логотип Россия" class="header__logo">
       <ul class="header__links">
         <li>
@@ -20,22 +20,20 @@
           <a href="#" class="header__lang-link">En</a>
         </li>
       </ul>
-      
-      
-    </header> -->
+    </header>
     <!-- ***** header end ***** -->
 
     <!-- ***** lead start ***** -->
-    <!-- <section class="lead">
-      <h1 class="lead__title">Путешествия по России</h1>
-      <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+    <section class="lead">
+      <h1 class="lead__title">Путешествия по&nbsp;России</h1>
+      <p class="lead__subtitle">Настоящая страна не&nbsp;в&nbsp;выпусках новостей, а&nbsp;здесь.</p>
       <div class="lead__image"></div>
-      <p class="lead__caption">ваша полка — верхняя</p>
-    </section> -->
+      <p class="lead__caption">ваша полка&nbsp;&mdash; верхняя</p>
+    </section>
     <!-- ***** lead end ***** -->
 
     <!-- ***** intro start ***** -->
-    <!-- <section class="intro">
+    <section class="intro">
       <h2 class="intro__title">Чего мы там не видели?</h2>
       <p class="intro__text">
         По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.
@@ -55,7 +53,7 @@
           <span class="intro__list-item">241</span>
         </li>
       </ul>
-    </section> -->
+    </section>
     <!-- ***** intro end ***** -->
 
     <!-- ***** photo-grid start ***** -->
@@ -172,7 +170,7 @@
           </p>
         </div>
       </article> -->
-      <article class="place">
+      <!-- <article class="place">
         <h2 class="place__title">Карелия</h2>
         <div class="place__website">
           <p class="place__url-heading">url</p>
@@ -185,20 +183,20 @@
           </p>
         </div>
       </article>
-    </section>
+    </section> -->
     <!-- ***** places end ***** -->
 
     <!-- ***** cover start ***** -->
-    <section class="cover">
+    <!-- <section class="cover">
       <h2 class="cover__title">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</h2>
       <p class="cover__subtitle">
         По&nbsp;мотивам учебной темы о&nbsp;Транссибе&nbsp;&mdash; путешествие от&nbsp;столицы до&nbsp;Байкала на&nbsp;электричках.
       </p>
-    </section>
+    </section> -->
     <!-- ***** cover end ***** -->
 
     <!-- ***** footer start ***** -->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <ul class="footer__links">
         <li>
           <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
@@ -219,7 +217,7 @@
       <p class="footer__copyright">
         &copy;2020. Екатерина Балабанидис
       </p>
-    </footer>
+    </footer> -->
     <!-- ***** footer end ***** -->
   </div>
   
