--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="page">
     <!-- ***** header start ***** -->
     <header class="header">
-      <img src="/images/__logo.svg" alt="Логотип Россия" class="header__logo">
+      <img src="images/__logo.svg" alt="Логотип Россия" class="header__logo">
       <ul class="header__links">
         <li>
           <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
@@ -61,40 +61,40 @@
     <section class="photo-grid">
       <ul class="photo-grid__items">
         <li>
-          <img src="/images/photo-grid__item-1.jpg" alt="Вид из окна поезда" class="photo-grid__item">
+          <img src="images/photo-grid__item-1.jpg" alt="Вид из окна поезда" class="photo-grid__item">
         </li>
         <li>
-          <img src="/images/photo-grid__item-2.jpg" alt="Белые облака, снежный горный хребет" class="photo-grid__item">
+          <img src="images/photo-grid__item-2.jpg" alt="Белые облака, снежный горный хребет" class="photo-grid__item">
         </li>
         <li>
-          <img src="/images/photo-grid__item-3.jpg" alt="Стога сена в поле" class="photo-grid__item">
+          <img src="images/photo-grid__item-3.jpg" alt="Стога сена в поле" class="photo-grid__item">
         </li>
         <li>
-          <img src="/images/photo-grid__item-4.jpg" alt="Снежный лес" class="photo-grid__item">
+          <img src="images/photo-grid__item-4.jpg" alt="Снежный лес" class="photo-grid__item">
         </li>
         <li>
-          <img src="/images/photo-grid__item-5.jpg" alt="Лёд озера Байкал" class="photo-grid__item">
+          <img src="images/photo-grid__item-5.jpg" alt="Лёд озера Байкал" class="photo-grid__item">
         </li>
         <li>
-          <img src="/images/photo-grid__item-6.jpg" alt="Морской пляж" class="photo-grid__item">
+          <img src="images/photo-grid__item-6.jpg" alt="Морской пляж" class="photo-grid__item">
         </li>
         <li>
-          <img src="/images/photo-grid__item-7.jpg" alt="Горные пики" class="photo-grid__item">
+          <img src="images/photo-grid__item-7.jpg" alt="Горные пики" class="photo-grid__item">
         </li>
         <li>
-          <img src="/images/photo-grid__item-8.jpg" alt="Белые береговые волноломы" class="photo-grid__item">
+          <img src="images/photo-grid__item-8.jpg" alt="Белые береговые волноломы" class="photo-grid__item">
         </li>
         <li>
-          <img src="/images/photo-grid__item-9.jpg" alt="Цветные горы" class="photo-grid__item">
+          <img src="images/photo-grid__item-9.jpg" alt="Цветные горы" class="photo-grid__item">
         </li>
         <li>
-          <img src="/images/photo-grid__item-10.jpg" alt="Подножие горы" class="photo-grid__item">
+          <img src="images/photo-grid__item-10.jpg" alt="Подножие горы" class="photo-grid__item">
         </li>
         <li>
-          <img src="/images/photo-grid__item-11.jpg" alt="Фьорды" class="photo-grid__item">
+          <img src="images/photo-grid__item-11.jpg" alt="Фьорды" class="photo-grid__item">
         </li>
         <li>
-          <img src="/images/photo-grid__item-12.jpg" alt="Горный пик в тумане облаков" class="photo-grid__item">
+          <img src="images/photo-grid__item-12.jpg" alt="Горный пик в тумане облаков" class="photo-grid__item">
         </li>
       </ul>
     </section>
@@ -102,13 +102,13 @@
 
     <!-- ***** places start ***** -->
     <section class="places">
-      <!-- <article class="place">
+      <article class="place">
         <h2 class="place__title">Куршская&emsp;коса</h2>
         <div class="place__website">
           <p class="place__url-heading">url</p>
           <a class="place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
         </div>
-        <img src="/images/park-kosa.jpg" alt="Куршская коса" class="place__image">
+        <img src="images/park-kosa.jpg" alt="Куршская коса" class="place__image">
         <div class="place__paragraphs">
           <p class="place__paragraph">
             Здесь, посреди лесов и&nbsp;песчаных дюн, вы&nbsp;сможете увидеть два водных горизонта&nbsp;&mdash; спокойного Куршского залива с&nbsp;одной стороны и&nbsp;подёрнутого рябью волн Балтийского моря с&nbsp;другой. Уникальная природная зона на&nbsp;краю российского анклава.
@@ -124,7 +124,7 @@
           <p class="place__url-heading">url</p>
           <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
         </div>
-        <img src="/images/kola-peninsula.jpg" alt="Кольский полуостров" class="place__image">
+        <img src="images/kola-peninsula.jpg" alt="Кольский полуостров" class="place__image">
         <div class="place__paragraphs">
           <p class="place__paragraph">
             Почти весь полуостров находится за&nbsp;Полярным кругом. Саамская тундра, от&nbsp;которой на&nbsp;юг&nbsp;&mdash; 
@@ -142,7 +142,7 @@
           <p class="place__url-heading">url</p>
           <a class="place__link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" target="_blank">YouTube</a>
         </div>
-        <img src="/images/altai.jpg" alt="Алтай" class="place__image">
+        <img src="images/altai.jpg" alt="Алтай" class="place__image">
         <div class="place__paragraphs">
           <p class="place__paragraph">
             Алтай&nbsp;&mdash; одно из&nbsp;красивейших мест в&nbsp;России. 
@@ -159,7 +159,7 @@
           <p class="place__url-heading">url</p>
           <a class="place__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
         </div>
-        <img src="/images/baikal.jpg" alt="Байкал" class="place__image">
+        <img src="images/baikal.jpg" alt="Байкал" class="place__image">
         <div class="place__paragraphs">
           <p class="place__paragraph">
             Всем известен Байкал как крупнейшее озеро 
@@ -170,55 +170,57 @@
           к&nbsp;мотоциклу, и&nbsp;тандем старается развить как можно б&oacute;льшую скорость на&nbsp;льду. В&nbsp;марте 2019 года на&nbsp;фестивале &laquo;Байкальская миля&raquo; был поставлен мировой рекорд&nbsp;&mdash; 197.011&nbsp;км/ч.
           </p>
         </div>
-      </article> -->
-      <!-- <article class="place">
+      </article>
+      <article class="place">
         <h2 class="place__title">Карелия</h2>
         <div class="place__website">
           <p class="place__url-heading">url</p>
           <a class="place__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
         </div>
-        <img src="/images/karelia.jpg" alt="Карелия" class="place__image">
+        <img src="images/karelia.jpg" alt="Карелия" class="place__image">
         <div class="place__paragraphs">
           <p class="place__paragraph">
             Сибирь заканчивается не&nbsp;на&nbsp;Урале, а&nbsp;в&nbsp;Карелии: образующая тайгу сибирская лиственница не&nbsp;растёт западнее Водлозера. Зато здесь она вымахивает на&nbsp;30&nbsp;метров&nbsp;&mdash; леса карельских национальных парков из-за непроходимых болот никогда не&nbsp;знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к&nbsp;живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В&nbsp;девственном лесу на&nbsp;сотню километров не&nbsp;встретишь тропы. А&nbsp;на&nbsp;редких тропинках деревья в&nbsp;паре метров от&nbsp;земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.
           </p>
         </div>
       </article>
-    </section> -->
+    </section>
     <!-- ***** places end ***** -->
 
     <!-- ***** cover start ***** -->
-    <!-- <section class="cover">
-      <h2 class="cover__title">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</h2>
+    <section class="cover">
+      <h2 class="cover__title">
+        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</a>
+      </h2>
       <p class="cover__subtitle">
         По&nbsp;мотивам учебной темы о&nbsp;Транссибе&nbsp;&mdash; путешествие от&nbsp;столицы до&nbsp;Байкала на&nbsp;электричках.
       </p>
-    </section> -->
+    </section>
     <!-- ***** cover end ***** -->
 
     <!-- ***** footer start ***** -->
-    <!-- <footer class="footer">
+    <footer class="footer">
       <ul class="footer__links">
         <li>
-          <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
+          <a href="https://yandex.ru/maps" class="footer__link" target="_blank">Карты</a>
         </li>
         <li>
-          <a href="https://yandex.ru/pogoda" class="footer__link">Погода</a>
+          <a href="https://yandex.ru/pogoda" class="footer__link" target="_blank">Погода</a>
         </li>
         <li>
-          <a href="https://rasp.yandex.ru" class="footer__link">Расписание</a>
+          <a href="https://rasp.yandex.ru" class="footer__link" target="_blank">Расписание</a>
         </li>
         <li>
-          <a href="https://calendar.yandex.ru" class="footer__link">Календарь</a>
+          <a href="https://calendar.yandex.ru" class="footer__link" target="_blank">Календарь</a>
         </li>
         <li>
-          <a href="https://travel.yandex.ru" class="footer__link">Путешествия</a>
+          <a href="https://travel.yandex.ru" class="footer__link" target="_blank">Путешествия</a>
         </li>
       </ul>
       <p class="footer__copyright">
         &copy;2020. Екатерина Балабанидис
       </p>
-    </footer> -->
+    </footer>
     <!-- ***** footer end ***** -->
   </div>
   
